--- a/src/main/webapp/resources/css/index.css
+++ b/src/main/webapp/resources/css/index.css
@@ -18,7 +18,7 @@
     --spacing-36: 36px;
     --padding-btn-add: calc(calc(var(--spacing-16)/2) + .55vw);
     --glow: 0px 0px 10px hsl(156, 85%, 60%);
-    --shadow-default: 0px 5px 10px rgba(0, 0, 0, 0.1);
+    --shadow-default: 0 1px 2px 0 rgb(0 0 0 / 15%);
     --shadow-default-hover: 0px 5px 10px rgba(0, 0, 0, 0.25);
     --receita-color: #03AD00;
     --despesa-color: #BB0000;
@@ -71,13 +71,26 @@ body{
     color: var(--font-color-1);
 }
 
+
 .title {
     font-weight: 600;
-    font-size: calc(1rem + .5vw);;
+    font-size: calc(1rem + .5vw);   
+}
+.title--decorated {
+	border-radius: 0px 42px 42px 42px;
+    background-color: #1c3c5e;
+    box-shadow: 0 2px 3px 0 rgb(0 0 0 / 15%);
+    color: white;
+    padding: .1rem 2rem;
+}
+.title--pill {
+	border-radius: 50rem;
+	padding: 0 2rem;
 }
 .title--500 {
     font-weight: 500;
 }
+
 
 .card--default {
     background-color: white;
@@ -88,33 +101,7 @@ body{
     padding: 1rem;
 }
 
-.button {
-    border: 1px solid var(--cta);
-    display: block;
-    padding: .75rem;
-    box-shadow: var(--shadow-default);
-    background-color: white;
-    border-radius: 5px;
-    height: 100%;
-    width: auto;
-}
-.button--height{
-    height: fit-content;
-    padding-top: 14px;
-    padding-bottom: 14px;
-}
-.button:hover{
-    box-shadow: var(--shadow-default-hover);
-}
-.button img {
-    height: calc(1.5rem + .3vw);
-    width: calc(1.5rem + .5vw);
-}
-@media (max-width: 575px) {
-    .button {
-        padding: .5rem;
-    }
-}
+
 .cursor-pointer {
 	cursor: pointer;
 }
@@ -130,6 +117,36 @@ a {
 .main-container {
     margin-top: calc(1rem + 3vw);
     margin-bottom: calc(1rem + 3vw);
+}
+
+/*---------------------------------------------*\
+    #BUTTONS (Delete and Edit)
+\*---------------------------------------------*/
+.button {
+    border: 1px solid var(--cta);
+    display: block;
+    padding: .75rem;
+    box-shadow: var(--shadow-default);
+    background-color: white;
+    border-radius: 5px;
+}
+.button > svg {
+    height: calc(1.5rem + .3vw);
+    width: calc(1.5rem + .5vw);
+    fill: var(--cta);
+}
+.button:hover {
+   background-color: var(--cta);
+}
+.button:hover > svg {
+   fill: #fff;
+}
+
+@media (max-width: 575px) {
+	/*diminui o botão no mobile*/
+    .button {
+        padding: .5rem;
+    }
 }
 
 /*---------------------------------------------*\
@@ -647,7 +664,7 @@ input {
 .adicionar__btn{
 	display: block;
 	background: #FFFFFF;
-	padding: .5rem;
+	padding: .25rem;
 	border-radius: 50rem;
 	border: 1px solid #12DC8B;
 	box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.15);
